Agrega segundo modelo

--- a/tareas/tarea_2/clasificacion.ipynb
+++ b/tareas/tarea_2/clasificacion.ipynb
@@ -20,7 +20,12 @@
     "import pandas as pd\n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn\n"
+    "import seaborn\n",
+    "from sklearn.datasets import make_blobs\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import random\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -913,6 +918,27 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "d75e3ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(56420, 23)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "6987cf36",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1098,7 @@
        "6054       1.0       6.0     33.6     37.6  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1106,151 @@
    "source": [
     "y = data.RainTomorrow\n",
     "x = data.drop(['Date','RainToday', 'Location',  'WindGustDir', 'WindDir9am','RainTomorrow', 'WindDir3pm', 'Rainfall'], axis=1)\n",
+    "\n",
     "x.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "68bfecc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(56420, 15)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6891ff2b",
+   "metadata": {},
+   "source": [
+    "# Reduccion de dimensionalidad con PCA\n",
+    "\n",
+    "### Primero escalamos el dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d5c79136",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StandardScaler()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6f4798f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.69120848  1.57529783  1.75769102 ...  0.25441126  1.27818584\n",
+      "   1.56362087]\n",
+      " [ 0.76913098  0.67150378  2.51521564 ... -1.25660337  0.31897996\n",
+      "   0.62746694]\n",
+      " [ 0.92497598  1.91960032  1.43303762 ...  0.63216492  1.59792114\n",
+      "   1.78303195]\n",
+      " ...\n",
+      " [ 1.12757448  1.23099533  0.02620618 ... -1.63435703  1.00412702\n",
+      "   1.37346461]\n",
+      " [ 0.94056048  1.08753596  0.18853289 ... -1.25660337  1.00412702\n",
+      "   0.94926986]\n",
+      " [ 1.04965198  1.07319002  0.02620618 ...  0.25441126  1.09547996\n",
+      "   1.21256315]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled_data=scaler.transform(x)\n",
+    "print(scaled_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "199bd23f",
+   "metadata": {},
+   "source": [
+    "### Luego aplicamos PCA\n",
+    "\n",
+    "Buscamos que tenga la cantidad minima de features, con un 95% de varianza."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "83341000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "#pca=PCA(n_components=2)\n",
+    "\n",
+    "pca=PCA(.95)\n",
+    "principalComponents = pca.fit(scaled_data)\n",
+    "pca_x = pca.transform(scaled_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3b9d9c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(56420, 9)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = pca_x\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5f18f8ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_x, test_x, train_y, test_y = train_test_split(scaled_data, y, test_size= 0.2)"
    ]
   },
   {
@@ -1088,47 +1258,62 @@
    "id": "83a5f908",
    "metadata": {},
    "source": [
-    "### SPLIT "
+    "# Random Forest "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "5f18f8ea",
+   "cell_type": "markdown",
+   "id": "6cb4ef6f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "train_x, test_x, train_y, test_y = train_test_split(x, y, test_size= 0.2)"
+    "## Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "id": "91b2c819",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 10, 15]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "model = RandomForestClassifier()\n",
     "n_estimators = [10, 100, 1000]\n",
-    "max_features = [2,6,10,14]\n",
-    "max_features = [2,10,15]\n",
-    "\n",
-    "print(max_features)"
+    "max_features = [2,5,8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26000ef3",
+   "metadata": {},
+   "source": [
+    "## Tunning Hyperparameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
+   "id": "f6d06d15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = dict(n_estimators=n_estimators,max_features=max_features)\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "grid_search = GridSearchCV(estimator=model, param_grid=grid, n_jobs=-1, cv=cv, scoring='accuracy',error_score=0)\n",
+    "grid_result = grid_search.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85822425",
+   "metadata": {},
+   "source": [
+    "## Best Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "1020808a",
    "metadata": {},
    "outputs": [
@@ -1136,29 +1321,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best: 0.859669 using {'max_features': 10, 'n_estimators': 1000}\n",
-      "0.846996 (0.003184) with: {'max_features': 2, 'n_estimators': 10}\n",
-      "0.858406 (0.003154) with: {'max_features': 2, 'n_estimators': 100}\n",
-      "0.859491 (0.003167) with: {'max_features': 2, 'n_estimators': 1000}\n",
-      "0.846420 (0.002960) with: {'max_features': 10, 'n_estimators': 10}\n",
-      "0.857099 (0.003038) with: {'max_features': 10, 'n_estimators': 100}\n",
-      "0.859669 (0.003309) with: {'max_features': 10, 'n_estimators': 1000}\n",
-      "0.847328 (0.003983) with: {'max_features': 15, 'n_estimators': 10}\n",
-      "0.856833 (0.003099) with: {'max_features': 15, 'n_estimators': 100}\n",
-      "0.858605 (0.002827) with: {'max_features': 15, 'n_estimators': 1000}\n"
+      "Best: 0.859610 using {'max_features': 5, 'n_estimators': 1000}\n",
+      "0.845002 (0.004831) with: {'max_features': 2, 'n_estimators': 10}\n",
+      "0.857372 (0.004636) with: {'max_features': 2, 'n_estimators': 100}\n",
+      "0.858797 (0.005323) with: {'max_features': 2, 'n_estimators': 1000}\n",
+      "0.846508 (0.004063) with: {'max_features': 5, 'n_estimators': 10}\n",
+      "0.857859 (0.004525) with: {'max_features': 5, 'n_estimators': 100}\n",
+      "0.859610 (0.004949) with: {'max_features': 5, 'n_estimators': 1000}\n",
+      "0.846944 (0.005147) with: {'max_features': 8, 'n_estimators': 10}\n",
+      "0.857593 (0.004484) with: {'max_features': 8, 'n_estimators': 100}\n",
+      "0.859299 (0.004967) with: {'max_features': 8, 'n_estimators': 1000}\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.datasets import make_blobs\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "grid = dict(n_estimators=n_estimators,max_features=max_features)\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=1, random_state=1)\n",
-    "grid_search = GridSearchCV(estimator=model, param_grid=grid, n_jobs=-1, cv=cv, scoring='accuracy',error_score=0)\n",
-    "grid_result = grid_search.fit(train_x, train_y)\n",
-    "# summarize results\n",
     "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
     "means = grid_result.cv_results_['mean_test_score']\n",
     "stds = grid_result.cv_results_['std_test_score']\n",
@@ -1168,18 +1344,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "02126118",
+   "cell_type": "markdown",
+   "id": "5fb7e690",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rfc = RandomForestClassifier(random_state= 42, max_features=10, n_estimators= 1000)"
+    "## Creaacion del modelo con los mejores parametros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
+   "id": "02126118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfc = RandomForestClassifier(random_state= 42, max_features=5, n_estimators= 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f093c2c",
+   "metadata": {},
+   "source": [
+    "## Training with hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "6b3bc6f9",
    "metadata": {},
    "outputs": [
@@ -1187,18 +1379,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Random Forest on CV data:  0.8609535625664658\n",
-      "Accuracy for Random Forest on CV data:  0.8608649415101028\n",
-      "Accuracy for Random Forest on CV data:  0.8605990783410138\n",
-      "Accuracy for Random Forest on CV data:  0.8642325416518964\n",
-      "Accuracy for Random Forest on CV data:  0.8565225097483162\n",
-      "Average accuracy :  0.8606345267635591\n"
+      "Accuracy for Random Forest on CV data:  0.84774902516838\n",
+      "Accuracy for Random Forest on CV data:  0.8458879829847572\n",
+      "Accuracy for Random Forest on CV data:  0.847837646224743\n",
+      "Accuracy for Random Forest on CV data:  0.8481921304501949\n",
+      "Accuracy for Random Forest on CV data:  0.8391527827011698\n",
+      "Average accuracy :  0.8457639135058489\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
-    "from sklearn.metrics import accuracy_score\n",
     "total = 0\n",
     "for i in range(5):\n",
     "    train_x, test_x, train_y, test_y = train_test_split(x, y, test_size= 0.2, random_state= random.randint(0, 100))\n",
@@ -1211,9 +1401,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3a1fb2f",
+   "metadata": {},
+   "source": [
+    "# Support Vector Machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d611b089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_x, test_x, train_y, test_y = train_test_split(x, y, test_size= 0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "584b84e5",
+   "metadata": {},
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fe54f0fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "model = SVC()\n",
+    "kernel = ['poly', 'sigmoid']\n",
+    "C = [10, 1.0, 0.1]\n",
+    "gamma = ['scale']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a6b9edc",
+   "metadata": {},
+   "source": [
+    "## Tunning Hyperparameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f53855a8",
+   "id": "ede3ef7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = dict(kernel=kernel,C=C,gamma=gamma)\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=1, random_state=1)\n",
+    "grid_search = GridSearchCV(estimator=model, param_grid=grid, n_jobs=-1, cv=cv, scoring='accuracy',error_score=0)\n",
+    "grid_result = grid_search.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a362cb1",
+   "metadata": {},
+   "source": [
+    "## Best Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "856ec0a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0f4c2a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm = SVC()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96da49f7",
+   "metadata": {},
+   "source": [
+    "## Training with hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "864d644d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "for i in range(5):\n",
+    "    train_x, test_x, train_y, test_y = train_test_split(x, y, test_size= 0.2, random_state= random.randint(0, 100))\n",
+    "    svm.fit(train_x, train_y)\n",
+    "    pred= svm.predict(test_x)\n",
+    "    total = total + accuracy_score(test_y,pred)\n",
+    "    print(\"Accuracy for Support Vector Classification on CV data: \",accuracy_score(test_y,pred))\n",
+    "\n",
+    "print(\"Average accuracy : \",total/5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42b06560",
    "metadata": {},
    "outputs": [],
    "source": []
