--- a/tareas/tarea_2/clasificacion.ipynb
+++ b/tareas/tarea_2/clasificacion.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Problema de clasificacion\n",
-    "En este ejercicio se pretende clasificar las aplicaciones por descargas. Esto se hara con base a ciertos parametros, que son los siguientes: cantidad de criticas(Reviews) y puntuacion promedio de esas criticas (Rating). Una vez se realice la regresion lineal, se pretende conocer la cantidad de instalaciones que una aplicacion alcanzo, conociendo solamente esos dos datos de parametro. \n"
+    "En este ejercicio se usara un dataset de la temperatura en australia, en el que el objetivo es predicir si llovera el dia de mañana. En este conjunto de datos tenemos varios tipos de datos; entre estos la temperatura, candtidad de lluvia, evaporacion, etc. En total conforman un conjunto de 23 columnas.\n"
    ]
   },
   {
@@ -256,6 +256,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d007a15d",
+   "metadata": {},
+   "source": [
+    "## Preprocesamiento\n",
+    "En esta seccion, vamos a proceder a limpiar el dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "22586190",
@@ -279,223 +288,6 @@
    ],
    "source": [
     "data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "642bb46a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>MinTemp</th>\n",
-       "      <th>MaxTemp</th>\n",
-       "      <th>Rainfall</th>\n",
-       "      <th>Evaporation</th>\n",
-       "      <th>Sunshine</th>\n",
-       "      <th>WindGustDir</th>\n",
-       "      <th>WindGustSpeed</th>\n",
-       "      <th>WindDir9am</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Humidity9am</th>\n",
-       "      <th>Humidity3pm</th>\n",
-       "      <th>Pressure9am</th>\n",
-       "      <th>Pressure3pm</th>\n",
-       "      <th>Cloud9am</th>\n",
-       "      <th>Cloud3pm</th>\n",
-       "      <th>Temp9am</th>\n",
-       "      <th>Temp3pm</th>\n",
-       "      <th>RainToday</th>\n",
-       "      <th>RainTomorrow</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>145455</th>\n",
-       "      <td>2017-06-21</td>\n",
-       "      <td>Uluru</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>E</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1024.6</td>\n",
-       "      <td>1020.3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.1</td>\n",
-       "      <td>22.4</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145456</th>\n",
-       "      <td>2017-06-22</td>\n",
-       "      <td>Uluru</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>25.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NNW</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>1023.5</td>\n",
-       "      <td>1019.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.9</td>\n",
-       "      <td>24.5</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145457</th>\n",
-       "      <td>2017-06-23</td>\n",
-       "      <td>Uluru</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>26.9</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>N</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1021.0</td>\n",
-       "      <td>1016.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>26.1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145458</th>\n",
-       "      <td>2017-06-24</td>\n",
-       "      <td>Uluru</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>SSE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1019.4</td>\n",
-       "      <td>1016.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>15.1</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145459</th>\n",
-       "      <td>2017-06-25</td>\n",
-       "      <td>Uluru</td>\n",
-       "      <td>14.9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ESE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>1020.2</td>\n",
-       "      <td>1017.9</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>20.9</td>\n",
-       "      <td>No</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Date Location  MinTemp  MaxTemp  Rainfall  Evaporation  \\\n",
-       "145455  2017-06-21    Uluru      2.8     23.4       0.0          NaN   \n",
-       "145456  2017-06-22    Uluru      3.6     25.3       0.0          NaN   \n",
-       "145457  2017-06-23    Uluru      5.4     26.9       0.0          NaN   \n",
-       "145458  2017-06-24    Uluru      7.8     27.0       0.0          NaN   \n",
-       "145459  2017-06-25    Uluru     14.9      NaN       0.0          NaN   \n",
-       "\n",
-       "        Sunshine WindGustDir  WindGustSpeed WindDir9am  ... Humidity9am  \\\n",
-       "145455       NaN           E           31.0         SE  ...        51.0   \n",
-       "145456       NaN         NNW           22.0         SE  ...        56.0   \n",
-       "145457       NaN           N           37.0         SE  ...        53.0   \n",
-       "145458       NaN          SE           28.0        SSE  ...        51.0   \n",
-       "145459       NaN         NaN            NaN        ESE  ...        62.0   \n",
-       "\n",
-       "        Humidity3pm  Pressure9am  Pressure3pm  Cloud9am  Cloud3pm  Temp9am  \\\n",
-       "145455         24.0       1024.6       1020.3       NaN       NaN     10.1   \n",
-       "145456         21.0       1023.5       1019.1       NaN       NaN     10.9   \n",
-       "145457         24.0       1021.0       1016.8       NaN       NaN     12.5   \n",
-       "145458         24.0       1019.4       1016.5       3.0       2.0     15.1   \n",
-       "145459         36.0       1020.2       1017.9       8.0       8.0     15.0   \n",
-       "\n",
-       "        Temp3pm  RainToday  RainTomorrow  \n",
-       "145455     22.4         No            No  \n",
-       "145456     24.5         No            No  \n",
-       "145457     26.1         No            No  \n",
-       "145458     26.0         No            No  \n",
-       "145459     20.9         No           NaN  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.tail()"
    ]
   },
   {
@@ -1266,7 +1058,9 @@
    "id": "6cb4ef6f",
    "metadata": {},
    "source": [
-    "## Parameters"
+    "## Parameters\n",
+    "* n_estimators, en esta prueba tiene una variabilidad entre 10, 100 y 1000, lo que equivale a la cantidad de árboles que se usará en el modelo\n",
+    "* max_features, en esta prueba tiene una variabilidad de 2, 5 y 8, lo que equivale a la cantidad de parámetros utilizados\n"
    ]
   },
   {
@@ -1348,7 +1142,10 @@
    "id": "5fb7e690",
    "metadata": {},
    "source": [
-    "## Creaacion del modelo con los mejores parametros"
+    "## Creación del modelo con los mejores parámetros\n",
+    "En la anterior salida podemos ver todos los modelos probados tienen un desempeño similar, sin embargo podemos ver que el algoritmo que tuvo mejor desempeño tuvo como parámetros:\n",
+    "* max_features = 5\n",
+    "* n_estimators = 1000\n"
    ]
   },
   {
@@ -1366,7 +1163,8 @@
    "id": "3f093c2c",
    "metadata": {},
    "source": [
-    "## Training with hyperparameters"
+    "## Training with hyperparameters\n",
+    "En esta parte se prueba el modelo con los mejores hiperparametros, con distintos datos. Esto con el propósito de evitar algún sesgo generado en el split. Razón por la que se usa un número aleatorio  para el random_state, de esta manera obtendremos distintas secciones de training y test.\n"
    ]
   },
   {
@@ -1424,7 +1222,10 @@
    "id": "584b84e5",
    "metadata": {},
    "source": [
-    "## Parameters"
+    "## Parameters\n",
+    "* kernel, en esta prueba tiene una variabilidad entre 'poly' y 'sigmoid', equivale a la  forma en que se separan los datos.\n",
+    "* C, en esta prueba tiene una variabilidad de 10, 1.0 y 0.1, lo que equivale a el castigo, en  este caso cuando el algoritmo deje por fuera un dato que debió ser incluido o viceversa.\n",
+    "\n"
    ]
   },
   {
@@ -1451,13 +1252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ede3ef7b",
    "metadata": {},
    "outputs": [],
    "source": [
     "grid = dict(kernel=kernel,C=C,gamma=gamma)\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=1, random_state=1)\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
     "grid_search = GridSearchCV(estimator=model, param_grid=grid, n_jobs=-1, cv=cv, scoring='accuracy',error_score=0)\n",
     "grid_result = grid_search.fit(train_x, train_y)"
    ]
@@ -1472,10 +1273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "856ec0a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best: 0.843695 using {'C': 10, 'gamma': 'scale', 'kernel': 'poly'}\n",
+      "0.843695 (0.006221) with: {'C': 10, 'gamma': 'scale', 'kernel': 'poly'}\n",
+      "0.764290 (0.012375) with: {'C': 10, 'gamma': 'scale', 'kernel': 'sigmoid'}\n",
+      "0.843008 (0.006212) with: {'C': 1.0, 'gamma': 'scale', 'kernel': 'poly'}\n",
+      "0.764644 (0.012395) with: {'C': 1.0, 'gamma': 'scale', 'kernel': 'sigmoid'}\n",
+      "0.840083 (0.005565) with: {'C': 0.1, 'gamma': 'scale', 'kernel': 'poly'}\n",
+      "0.767724 (0.013134) with: {'C': 0.1, 'gamma': 'scale', 'kernel': 'sigmoid'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
     "means = grid_result.cv_results_['mean_test_score']\n",
@@ -1486,13 +1301,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8b23508",
+   "metadata": {},
+   "source": [
+    "## Creación del modelo con los mejores parámetros\n",
+    "En la anterior salida podemos ver todos los modelos probados, podemos ver que el desempeño tiene un poco de variabilidad, el algoritmo que tuvo mejor desempeño tuvo como parámetros:\n",
+    "* kernel = poly\n",
+    "* C = 20\n",
+    "* gamma = scale\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c0f4c2a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "svm = SVC()"
+    "svm = SVC(kernel='poly',C=10,gamma='scale')"
    ]
   },
   {
@@ -1500,15 +1327,29 @@
    "id": "96da49f7",
    "metadata": {},
    "source": [
-    "## Training with hyperparameters"
+    "## Training with hyperparameters\n",
+    "En esta parte se prueba el modelo con los mejores hiperparametros, con distintos datos. Esto con el propósito de evitar algún sesgo generado en el split. Razón por la que se usa un número aleatorio  para el random_state, de esta manera obtendremos distintas secciones de training y test.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "864d644d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for Support Vector Classification on CV data:  0.8445586671393123\n",
+      "Accuracy for Support Vector Classification on CV data:  0.8408365827720666\n",
+      "Accuracy for Support Vector Classification on CV data:  0.8429634881247784\n",
+      "Accuracy for Support Vector Classification on CV data:  0.8427862460120524\n",
+      "Accuracy for Support Vector Classification on CV data:  0.8417227933356966\n",
+      "Average accuracy :  0.8425735554767811\n"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "for i in range(5):\n",
