--- a/tareas/tarea_2/clasificacion.ipynb
+++ b/tareas/tarea_2/clasificacion.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c21acd74",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "(145460, 23)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "338ba321",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "max        9.000000      9.000000      40.200000      46.70000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,8 +565,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5e553b9",
+   "metadata": {},
+   "source": [
+    "### Se verifican los datos nulos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "922cee42",
    "metadata": {},
    "outputs": [
@@ -599,7 +607,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,8 +617,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9da88c2f",
+   "metadata": {},
+   "source": [
+    "### Se borran los datos nulos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8faa4782",
    "metadata": {},
    "outputs": [],
@@ -620,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7ed8e71f",
    "metadata": {},
    "outputs": [
@@ -630,7 +646,7 @@
        "(56420, 23)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "551a213a",
    "metadata": {},
    "outputs": [
@@ -674,7 +690,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,8 +700,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ec88141",
+   "metadata": {},
+   "source": [
+    "### Se verifica que exista representatividad para cada tipo (llueve o no llueve) "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "df8d5603",
    "metadata": {},
    "outputs": [
@@ -697,7 +721,7 @@
        "Name: RainTomorrow, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d75e3ef7",
    "metadata": {},
    "outputs": [
@@ -719,7 +743,7 @@
        "(56420, 23)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6987cf36",
    "metadata": {},
    "outputs": [
@@ -890,7 +914,7 @@
        "6054       1.0       6.0     33.6     37.6  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "68bfecc5",
    "metadata": {},
    "outputs": [
@@ -914,7 +938,7 @@
        "(56420, 15)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d5c79136",
    "metadata": {},
    "outputs": [
@@ -945,7 +969,7 @@
        "StandardScaler()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "6f4798f3",
    "metadata": {},
    "outputs": [
@@ -999,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "83341000",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "3b9d9c00",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1048,7 @@
        "(56420, 9)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "5f18f8ea",
    "metadata": {},
    "outputs": [],
@@ -1081,7 +1105,9 @@
    "id": "26000ef3",
    "metadata": {},
    "source": [
-    "## Tunning Hyperparameters"
+    "## Tunning Hyperparameters\n",
+    "\n",
+    " Se ejecuta la combinación de cada parámetro en un estratified cross validation."
    ]
   },
   {
@@ -1102,7 +1128,9 @@
    "id": "85822425",
    "metadata": {},
    "source": [
-    "## Best Hyperparameters"
+    "## Best Hyperparameters\n",
+    "\n",
+    "Imprimimos la combinación de los parámetros y sus resultados, obtenemos la mejor combinacion de estos para obtener el mejor resultado."
    ]
   },
   {
@@ -1208,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "d611b089",
    "metadata": {},
    "outputs": [],
@@ -1230,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "fe54f0fb",
    "metadata": {},
    "outputs": [],
@@ -1247,7 +1275,9 @@
    "id": "8a6b9edc",
    "metadata": {},
    "source": [
-    "## Tunning Hyperparameters"
+    "## Tunning Hyperparameters\n",
+    "\n",
+    " Se ejecuta la combinación de cada parámetro en un estratified cross validation."
    ]
   },
   {
@@ -1268,7 +1298,9 @@
    "id": "4a362cb1",
    "metadata": {},
    "source": [
-    "## Best Hyperparameters"
+    "## Best Hyperparameters\n",
+    "\n",
+    "Imprimimos la combinación de los parámetros y sus resultados, obtenemos la mejor combinacion de estos para obtener el mejor resultado."
    ]
   },
   {
@@ -1314,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "c0f4c2a1",
    "metadata": {},
    "outputs": [],
@@ -1363,12 +1395,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a3721b0",
+   "metadata": {},
+   "source": [
+    "### Training with hyperparameters\n",
+    "\n",
+    "Ahora esta vez se usará el método de sklearn cross_val_score, en el que se hacen lo mismo que el código anterior, pero de manera estratificada. Evitando que las muestras tengan algún sesgo.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "42b06560",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.83463311 0.83826657 0.83419    0.8489011  0.84181141]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "results = (cross_val_score(svm, x, y, cv= 5, n_jobs=-1))\n",
+    "\n",
+    "print (results) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a6c941e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Promedio de los resultados con el metodo cross_val_score  0.8395604395604396\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_result = 0\n",
+    "for res in( results):\n",
+    "    average_result += res\n",
+    "    \n",
+    "print(\"Promedio de los resultados con el metodo cross_val_score \", average_result / 5)"
+   ]
   }
  ],
  "metadata": {
