--- a/tareas/tarea_3/neural_network.ipynb
+++ b/tareas/tarea_3/neural_network.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ee2d46eb",
    "metadata": {},
    "outputs": [],
@@ -31,12 +31,13 @@
     "from keras.layers import Dense\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from keras.wrappers.scikit_learn import KerasClassifier\n",
-    "from sklearn.model_selection import StratifiedKFold"
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import KFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5b1ed1d7",
    "metadata": {},
    "outputs": [],
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "57ba6be5",
    "metadata": {},
    "outputs": [
@@ -252,7 +253,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "22586190",
    "metadata": {},
    "outputs": [
@@ -287,7 +288,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c21acd74",
    "metadata": {},
    "outputs": [
@@ -308,7 +309,7 @@
        "(145460, 23)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "338ba321",
    "metadata": {},
    "outputs": [
@@ -561,7 +562,7 @@
        "max        9.000000      9.000000      40.200000      46.70000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "922cee42",
    "metadata": {},
    "outputs": [
@@ -613,7 +614,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8faa4782",
    "metadata": {},
    "outputs": [],
@@ -642,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7ed8e71f",
    "metadata": {},
    "outputs": [
@@ -652,7 +653,7 @@
        "(56420, 23)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "551a213a",
    "metadata": {},
    "outputs": [
@@ -696,7 +697,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "df8d5603",
    "metadata": {},
    "outputs": [
@@ -727,7 +728,7 @@
        "Name: RainTomorrow, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d75e3ef7",
    "metadata": {},
    "outputs": [
@@ -749,7 +750,7 @@
        "(56420, 23)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6987cf36",
    "metadata": {},
    "outputs": [
@@ -920,7 +921,7 @@
        "6054       1.0       6.0     33.6     37.6  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "68bfecc5",
    "metadata": {},
    "outputs": [
@@ -944,7 +945,7 @@
        "(56420, 15)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d5c79136",
    "metadata": {},
    "outputs": [
@@ -975,7 +976,7 @@
        "StandardScaler()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6f4798f3",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "83341000",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3b9d9c00",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1055,7 @@
        "(56420, 9)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "5f18f8ea",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "16d45173",
    "metadata": {},
    "outputs": [
@@ -1381,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "63f39dd8",
    "metadata": {},
    "outputs": [],
@@ -1513,9 +1514,7 @@
     }
    ],
    "source": [
-    "total = 0\n",
     "\n",
-    "prob = 0\n",
     "train_x, test_x, train_y, test_y = train_test_split(x, y, test_size= 0.2, random_state= random.randint(0, 100))\n",
     "batch_model.fit(train_x, train_y, verbose=0)\n",
     "probabilities = batch_model.predict_proba(test_x)\n"
@@ -1523,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "id": "82f71320",
    "metadata": {},
    "outputs": [
@@ -1531,13 +1530,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8467032968997955\n"
+      "0.8452144622802734\n"
      ]
     }
    ],
    "source": [
     "y = data.RainTomorrow\n",
-    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=random.randint(0, 10))\n",
+    "kfold = KFold(n_splits=10, shuffle=True, random_state=random.randint(0, 10)) \n",
     "results = cross_val_score(batch_model, x, y, cv=kfold, n_jobs=-1)\n",
     "print(results.mean())"
    ]
@@ -1774,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "3655f8c8",
    "metadata": {},
    "outputs": [],
@@ -1795,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "1af3d77a",
    "metadata": {},
    "outputs": [],
@@ -1805,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "id": "6cf98162",
    "metadata": {},
    "outputs": [
@@ -1813,13 +1812,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8459411561489105\n"
+      "0.8466324090957642\n"
      ]
     }
    ],
    "source": [
     "y = data.RainTomorrow\n",
-    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=random.randint(0, 10))\n",
+    "kfold = KFold(n_splits=10, shuffle=True, random_state=random.randint(0, 10)) \n",
     "results = cross_val_score(activation_model, x, y, cv=kfold, n_jobs=-1)\n",
     "print(results.mean())                    "
    ]
@@ -1838,7 +1837,7 @@
     "* Epoch = 50\n",
     "* Activation function = normal\n",
     "\n",
-    "Con esta combinación de parámetros obtuvimos una precisión de 0.8459411561489105 .\n"
+    "Con esta combinación de parámetros obtuvimos una precisión de 0.8466324090957642.\n"
    ]
   },
   {
@@ -1871,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "id": "e41044ee",
    "metadata": {},
    "outputs": [],
@@ -2075,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "id": "8260b8f2",
    "metadata": {},
    "outputs": [],
@@ -2086,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "id": "a597dc9b",
    "metadata": {},
    "outputs": [
@@ -2094,13 +2093,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8467564761638642\n"
+      "0.846242469549179\n"
      ]
     }
    ],
    "source": [
     "y = data.RainTomorrow\n",
-    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=random.randint(0, 10))\n",
+    "kfold = KFold(n_splits=10, shuffle=True, random_state=random.randint(0, 10)) \n",
     "results = cross_val_score(model, x, y, cv=kfold, n_jobs=-1)\n",
     "print(results.mean())           "
    ]
@@ -2119,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "id": "143cf3c7",
    "metadata": {},
    "outputs": [],
@@ -2306,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "id": "54449c82",
    "metadata": {},
    "outputs": [],
@@ -2325,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
    "id": "02126118",
    "metadata": {},
    "outputs": [
@@ -2333,13 +2332,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8456930220127106\n"
+      "0.8469337165355683\n"
      ]
     }
    ],
    "source": [
     "y = data.RainTomorrow\n",
-    "kfold = StratifiedKFold(n_splits=10, shuffle=True, random_state=random.randint(0, 10))\n",
+    "kfold = KFold(n_splits=10, shuffle=True, random_state=random.randint(0, 10)) \n",
     "results = cross_val_score(model, x, y, cv=kfold, n_jobs=-1)\n",
     "print(results.mean())"
    ]
@@ -2349,7 +2348,7 @@
    "id": "ad9463c9",
    "metadata": {},
    "source": [
-    "## Resumen\n",
+    "0.8469337165355683## Resumen\n",
     "    mymodel.add(Dense(9, input_dim=9, activation='relu'))\n",
     "    mymodel.add(Dense(6, activation='relu'))\n",
     "    mymodel.add(Dense(1, activation='sigmoid'))\n",
@@ -2360,7 +2359,7 @@
     "* Epoch = 30\n",
     "* Activation function optimizer = Adam\n",
     "\n",
-    "Con esta combinación se obtuvo una precisión de 0.8456930220127106, muy similar a la obtenida en la red neuronal más compleja."
+    "Con esta combinación se obtuvo una precisión de 0.8469337165355683, muy similar a la obtenida en la red neuronal más compleja."
    ]
   }
  ],
